Fixed #32 Width page issue on mobile

--- a/style.css
+++ b/style.css
@@ -1116,6 +1116,7 @@ button.menu-toggle:hover {
 .content-area,
 .widget-area {
 	flex: 1 100%;
+	max-width: 100%;
 }
 
 .more-link {
@@ -2169,9 +2170,7 @@ div.wpcf7-mail-sent-ok {
 /*--------------------------------------------------------------
 ## Responsive
 --------------------------------------------------------------*/
-
-
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 993px) {
 
 	/*-----------------------
 	### Sidebar
@@ -2206,8 +2205,7 @@ div.wpcf7-mail-sent-ok {
 
 }
 
-
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 769px) {
 
 	/*-----------------------
 	### Header
@@ -2447,12 +2445,9 @@ div.wpcf7-mail-sent-ok {
 		margin-top: 10px;
 	}
 
-
 }
 
-
-@media screen and (min-width: 600px) {
-
+@media screen and (min-width: 601px) {
 
 	.carousel-title {
 		font-size: 80px;
@@ -2465,15 +2460,6 @@ div.wpcf7-mail-sent-ok {
 
 }
 
-
-@media screen and (min-width: 480px) {
-
-
-
-
-
-}
-
 @media screen and (max-width: 600px) {
 
 	#page {
@@ -2481,13 +2467,3 @@ div.wpcf7-mail-sent-ok {
 	}
 
 }
-
-
-
-
-
-/*
-	font-family: 'Playfair Display', serif;
-	font-family: 'Open Sans', sans-serif;
-	font-weight: 400;
-*/
